# codexi-project

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
crates/codexi/: Cargo.toml  README.md
crates/codexi-cli/: Cargo.toml
crates/codexi-cli/src/: main.rs  msg.rs  prompts.rs
crates/codexi-cli/src/assets/templates/: statement.html  stats.html
crates/codexi-cli/src/command/: account.rs  admin.rs  bank.rs  category.rs  counterparty.rs  countparty.rs  currency.rs  data.rs  history.rs  loan.rs  mod.rs  operation.rs  report.rs  root.rs
crates/codexi-cli/src/export/: mod.rs  statement.rs  stats.rs
crates/codexi-cli/src/handler/: account.rs  admin.rs  bank.rs  category.rs  counterparty.rs  currency.rs  data.rs  history.rs  loan.rs  mod.rs  operation.rs  report.rs  root.rs
crates/codexi-cli/src/tui/: root.rs
crates/codexi-cli/src/ui/: account.rs  balance.rs  bank.rs  category.rs  counterparty.rs  currency.rs  display.rs  loan.rs  mod.rs  operation.rs  rate.rs  report.rs  tree.rs  ui.rs
crates/codexi/src/: lib.rs
crates/codexi/src/core/: error.rs  format.rs  fs.rs  mod.rs  parse.rs  paths.rs  serde_nulid.rs  validation.rs  warning.rs
crates/codexi/src/dto/: account.rs  balance.rs  bank.rs  category.rs  counterparty.rs  currency.rs  dashboard.rs  exchange_rate.rs  mod.rs  monthly_report.rs  operation.rs  statement.rs  stats.rs  summary.rs
crates/codexi/src/exchange/: error.rs  exchangeable.rs  export.rs  import.rs  mod.rs  summary.rs  validation.rs
crates/codexi/src/exchange/models/: account.rs  category.rs  checkpoint.rs  counterparty.rs  currency.rs  data.rs  mod.rs  operation.rs
crates/codexi/src/exchange/validator/: account.rs  category.rs  counterparty.rs  currency.rs  mod.rs  operation.rs
crates/codexi/src/file_management/: archive.rs  backup.rs  cbor.rs  envelope.rs  error.rs  format.rs  html.rs  json.rs  maintenance.rs  mod.rs  snapshot.rs  state.rs  storage.rs  toml.rs
crates/codexi/src/logic/: mod.rs
crates/codexi/src/logic/account/: account_type.rs  action.rs  anchors.rs  archive.rs  audit.rs  container.rs  dto.rs  entry.rs  error.rs  merge.rs  mod.rs  model.rs  reports.rs  search.rs
crates/codexi/src/logic/balance/: dto.rs  mod.rs  model.rs
crates/codexi/src/logic/bank/: dto.rs  entry.rs  error.rs  list.rs  mod.rs  model.rs
crates/codexi/src/logic/category/: dto.rs  entry.rs  error.rs  list.rs  merge.rs  mod.rs  model.rs
crates/codexi/src/logic/codexi/: audit.rs  dto.rs  entry.rs  error.rs  import.rs  init_data.rs  migration_v1.rs  migration_v2.rs  mod.rs  model.rs  settings.rs  transfer.rs
crates/codexi/src/logic/counterparty/: error.rs  kind.rs  list.rs  merge.rs  mod.rs  model.rs
crates/codexi/src/logic/counts/: mod.rs
crates/codexi/src/logic/currency/: dto.rs  entry.rs  error.rs  list.rs  merge.rs  mod.rs  model.rs
crates/codexi/src/logic/loan/: error.rs  mod.rs  model.rs  settings.rs
crates/codexi/src/logic/operation/: error.rs  flow.rs  kind.rs  mod.rs  model.rs  regular.rs  system.rs
crates/codexi/src/logic/search/: error.rs  mod.rs  operation.rs
crates/codexi/src/logic/utils/: mod.rs  resolve_id.rs
crates/codexi/src/seeds/: banks.json  categories_en.json  categories_fr.json  counterparties_en.json  counterparties_fr.json  currencies.json
crates/codexi/src/types/: date_range.rs  mod.rs
crates/codexi/tests/: account_test.rs
docs/: loan.md  (+3 more)
(+46 files in other folders)
