[package]
name = "codexi"
version = "2.0.1"
edition = "2024"

[dependencies]
# Error
anyhow = "1"
thiserror = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
toml = "0.8"
bincode = "1"
serde_cbor = "0.11"

# Checksum
sha2 = "0"

# Decimal to replace f64
rust_decimal = { version = "1", features = ["serde"] }
rust_decimal_macros = "1"

# Logging
log = "0.4"
env_logger = { version = "0.11" }

# Date/time formatting
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Backup/restore
zip = "0.6"
walkdir = "2.3"

# Others
directories = "6.0"
thousands = "0.2.0"
owo-colors = "4.0"
