[workspace]
members = [
    "crates/codexi",
    "crates/codexi-cli",
]

resolver = "3"

# Share dependencies
[workspace.dependencies]

# Error
anyhow = "1"
thiserror = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
toml = "0.8"
ciborium = "0.2"

# Checksum
sha2 = "0.10"

# Decimal to replace f64
rust_decimal = { version = "1", features = ["serde"] }
rust_decimal_macros = "1"

# Date/time formatting
chrono = { version = "0.4", features = ["serde"] }
# Id
nulid = { version = "0.10", features = ["serde"] }
# CLI
clap = { version = "4.6", features = ["derive"] }
# html report
tera = "1.20"
opener = "0.8"

# Backup/restore
zip = "0.6"
walkdir = "2.3"

# Utilities
directories = "6.0"
thousands = "0.2.0"
dialoguer = "0.12"
console = "0.16"
inquire = "0.9"
derive_builder = "0.20"

[profile.release]
opt-level = 2
lto = "off"
codegen-units = 16
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
incremental = true
split-debuginfo = "unpacked"
