[package]
name = "codexi-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
# Project librairy
codexi = { path = "../codexi" }

# Error
anyhow  = { workspace = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Decimal to replace f64
rust_decimal = { workspace = true }
rust_decimal_macros =  { workspace = true }

# CLI
clap = { workspace = true }
# html report
tera = { workspace = true }
opener = { workspace = true }

# Utilities
thousands = { workspace = true }
dialoguer = { workspace = true }
console = { workspace = true }
chrono = { workspace = true }

# Logging
log = { workspace = true }
env_logger = { workspace = true }
